web/css/main.css
body, html {
    margin:0;
    padding:0;
    display: flex;
    flex-direction: column;
    background: cornflowerblue;
}

.active{
    box-shadow: inset 0px 0px 7px darkblue;
}

.table-row{
    background: papayawhip;
    display: flex;
    color: #222222;
    text-align: center;
    height: 50px;
    align-items: center;
}

#submit-button {
    margin: 10px auto 0;
    width: 80px;
}

#header {
    height: 75px;
    background: darkblue 100%;
    color: aliceblue;
    font-family: sans-serif;
    font-size: xx-large;
    padding: 20px 20px 0 20px;
    display: flex;
    justify-content: space-between;
}

#github, #github > a:visited{
    margin-right: 15px;
    color: aliceblue;
    text-decoration: none;
    !important;
}

#data-form {
    display: flex;
    justify-content: center;
    flex-direction: column;
    width: 100%;
}

#data-form > div {
    margin: 10px auto 0;
}

.value-space {
    width: 500px;
    height: auto;
    text-align: center;
    font-size: large;
    background: rgba(135, 206, 250, 0.5);
    border-radius: 5px;
    margin-top: 10px;
}

header > div {
    text-align: center;
    flex: auto;
}


button, .button, .button:visited {
    border: 2px solid darkblue;
    border-radius: 5px;
    background: lightsteelblue;
    color: #222222;
    width: 5em;
    padding: 0.5em;
    text-decoration: none;
}

.table{
    border: 3px solid blue;
    border-radius: 5px;
    margin: 0 auto;
    width: min-content;
}

.table:empty{
    border: none;
}

.table-header, .table-row{
    margin: auto;
    background: darkblue;
    font-size: 20px;
    height: 50px;
    width: 500px;
    align-items: center;
    display: flex;
    color: aliceblue;
    text-align: center;
}

.table-row {
    background: rgba(0, 0, 139, 0.5);
}

.table-header > div:nth-child(1)
, .table-header > div:nth-child(2)
, .table-header > div:nth-child(3){
    width: 40px;
    margin: 2px;
}

.table-header > div:nth-child(4) {
    width: 200px;
    margin: 2px;
}

.table-header > div:last-child{
    width: 140px;
    margin: 2px;
}


.table-header > div:nth-child(1)
, .table-header > div:nth-child(2)
, .table-header > div:nth-child(3)
, .table-row > div:nth-child(1)
, .table-row > div:nth-child(2)
, .table-row > div:nth-child(3){
    width: 40px;
    margin: 2px;
}

.table-header > div:nth-child(4),
.table-row > div:nth-child(4){
    width: 200px;
    margin: 2px;
}

.table-header > div:last-child,
.table-row > div:last-child{
    width: 140px;
    margin: 2px;
}

